# kia-xceed-hud

./: .gitignore  LICENSE  README.md  platformio.ini
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BUILDING.md  HARDWARE.md  ROADMAP.md  SAFETY.md  WEB_API.md
firmware/KiaXCeedHUD/: KiaXCeedHUD.ino  lv_conf.h  partitions.csv
firmware/KiaXCeedHUD/src/: AnalysisUi.h  BoardServices.h  Config.h  Core.h  Dashboard.h  Display.h  FrameAnalytics.h  GraphicCache.h  ObdSimulator.h  OtaUi.h  Performance.h  Splash.h  SplashAsset.h  StandardPids.h  TestMode.h  TestModeSecrets.example.h  VehicleBus.h  WebAssets.generated.h  WebUi.h
firmware/KiaXCeedHUD/src/fonts/: HudFont128.c  HudFont160.c  HudFont192.c  HudFont256.c  HudFont320.c  HudFont400.c  HudFont64.c  HudFont80.c  HudFont96.c  HudFontDejaVu16.c
firmware/KiaXCeedHUD/web/: analysis.js  app.css  app.js  features.js  index.html  runtime.js
test/: CMakeLists.txt  core_tests.cpp  web_catalog_tests.js
tools/: generate_web_assets.py  patch_arduino_gfx_double_buffer.ps1
