cmake_minimum_required(VERSION 3.16)
project(kia_hud_tests LANGUAGES CXX)
enable_testing()
find_package(Python3 REQUIRED COMPONENTS Interpreter)
find_program(NODE_EXECUTABLE node REQUIRED)
add_executable(core_tests core_tests.cpp)
target_compile_features(core_tests PRIVATE cxx_std_17)
target_include_directories(core_tests PRIVATE ../firmware/KiaXCeedHUD/src)
if(MSVC)
  target_compile_options(core_tests PRIVATE /UNDEBUG)
else()
  target_compile_options(core_tests PRIVATE -UNDEBUG)
endif()
add_test(NAME core_tests COMMAND core_tests)
add_test(NAME web_assets_current COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/../tools/generate_web_assets.py --check)
add_test(NAME web_app_syntax COMMAND ${NODE_EXECUTABLE} --check ${CMAKE_CURRENT_SOURCE_DIR}/../firmware/KiaXCeedHUD/web/app.js)
add_test(NAME web_runtime_syntax COMMAND ${NODE_EXECUTABLE} --check ${CMAKE_CURRENT_SOURCE_DIR}/../firmware/KiaXCeedHUD/web/runtime.js)
add_test(NAME web_analysis_syntax COMMAND ${NODE_EXECUTABLE} --check ${CMAKE_CURRENT_SOURCE_DIR}/../firmware/KiaXCeedHUD/web/analysis.js)
add_test(NAME web_features_syntax COMMAND ${NODE_EXECUTABLE} --check ${CMAKE_CURRENT_SOURCE_DIR}/../firmware/KiaXCeedHUD/web/features.js)
add_test(NAME web_widget_catalog COMMAND ${NODE_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/web_catalog_tests.js)
